samples/_failures_safe/1761690957_78329b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6ed8429e.c: In function ‘main’:
./samples/SAFE/__tmp_6ed8429e.c:157:43: error: expected ‘)’ at end of input
  157 |     size_t input_len = strlen(input_buffer
      |                              ~            ^
      |                                           )
./samples/SAFE/__tmp_6ed8429e.c:157:5: error: expected declaration or statement at end of input
  157 |     size_t input_len = strlen(input_buffer
      |     ^~~~~~
